--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ h1 {
     font-family: 'Spartan', sans-serif;
     font-weight: 400px;
     color: hsl(300, 43%, 22%);
-    position: absolute;
-    left: 0;
-    top: 0;
-    
+    display: flex;   
+    flex-direction: column;
+    width: 30%;
+
 }
 
 
@@ -29,11 +29,10 @@ h1 {
 
 
 .Ratings-Group {
-    position: absolute;
+
     display: flex;
-    right: 0;
-    top: 0;
-    margin: 60px;
+    flex-direction: column;
+    
     
     
 }
@@ -41,20 +40,25 @@ h1 {
 #Rating-1 {
     color: hsl(300, 43%, 22%);
     background: hsl(333, 80%, 67%);
-    margin: 20px;
+    margin: 7px;
+    align-self: flex-start;
+    
+    
     
 }
 
 #Rating-2 {
     color: hsl(300, 43%, 22%);
     background: hsl(333, 80%, 67%);
-    margin: 20px;
+    margin: 7px;
+    align-self: center;
 
 }
 
 #Rating-3 {
     color: hsl(300, 43%, 22%);
     background: hsl(333, 80%, 67%);
-    margin: 20px;
+    margin: 7px;
+    align-self: flex-end;
 }
 
