--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-body {
+#background {
     font-size: 15px;
     width: 1440px;
     font-family: 'Spartan', sans-serif;
+    
 
 
 }
@@ -57,6 +58,21 @@ h1 {
      
 }
 
+#Ratings-Group .Rating-1 {
+    display: flex;
+    align-items: center;
+}
+
+#Ratings-Group .Rating-2 {
+    display: flex;
+    align-items: center;
+}
+
+#Ratings-Group .Rating-3 {
+    display: flex;
+    align-items: center;
+}
+
 .Rating-2 {
     color: hsl(300, 43%, 22%);
     background: hsl(333, 80%, 67%);
@@ -98,7 +114,7 @@ h1 {
     border-radius: 10px;
     align-self: flex-start;
     justify-content: flex-start;
-    margin-top: 20px;
+    margin-top: 40px;
 
 
 }
@@ -120,7 +136,7 @@ h1 {
     margin: 10px;
     border-radius: 10px;
     align-self: flex-end;
-    margin-top: 100px;
+    margin-top: 75px;
     
     
 }
