--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #background {
     font-size: 15px;
-    width: 1440px;
+    width: 100%;
     
     
 
@@ -11,6 +11,7 @@
 .container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 
 }
 
@@ -79,9 +80,10 @@ h1 {
     background: hsla(333, 80%, 67%, 0.2);
     align-self: center;
     margin: 7px;
-    padding-left: 40px;
+    padding-left: 25px;
     padding-right: 40px;
     border-radius: 10px;
+    flex-shrink: 2;
 
 }
 
@@ -102,6 +104,7 @@ h1 {
     display: flex;
     flex-direction: row;
     font-family: sans-serif;
+    flex-wrap: wrap;
 
 }
 
