--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 #background {
     font-size: 15px;
-    width: 100%;
-    
-    
+    margin: 100px;
 
+    
 
 }
 
@@ -27,7 +26,7 @@ h1 {
 
     color: hsl(300, 43%, 22%);
      width: 50%;
-     margin: 100px;    
+  
 
 }
 
@@ -41,15 +40,19 @@ h1 {
    font-family: 'Spartan', sans-serif; 
 }
 
+.container #Ratings-Group {
+    justify-content: center;
+}
+
 
 #Ratings-Group {
 
     display: flex;
     flex-direction: column;
-    width: 70%;
-    margin: 100px;
+    width: 50%;
     font-family: sans-serif;
-     
+
+   
 }
 
 .space {
@@ -64,13 +67,14 @@ h1 {
     padding-left: 40px;
     padding-right: 40px;
     border-radius: 10px;
+    flex-wrap: wrap;
+
  
 }
 
 #Ratings-Group > div {
     display: flex;
     align-items: center;
-
 }
 
 
@@ -84,6 +88,7 @@ h1 {
     padding-right: 40px;
     border-radius: 10px;
     flex-shrink: 2;
+    flex-wrap: wrap;
 
 }
 
@@ -95,12 +100,13 @@ h1 {
     padding-left: 40px;
     padding-right: 40px;
     border-radius: 10px;
+    flex-wrap: wrap;
 
 }
 
 .Customers  {
     
-    margin: 100px;
+  
     display: flex;
     flex-direction: row;
     font-family: sans-serif;
@@ -127,7 +133,7 @@ h1 {
 
 .Customers > div {
     display: flex;
-    flex-direction: column;  
+    flex-direction: column; 
 
 }
 
@@ -144,6 +150,7 @@ h1 {
     align-self: flex-start;
     justify-content: flex-start;
     margin-top: 40px;
+    width: 23%;
 
 
 }
@@ -156,6 +163,7 @@ h1 {
     border-radius: 10px;
     align-self: center;
     margin-top: 35px;
+    width: 23%;
 }
 
 #Customer-3 {
@@ -166,7 +174,7 @@ h1 {
     border-radius: 10px;
     align-self: flex-end;
     margin-top: 75px;
-    
+    width: 23%;
     
 }
 
