--- a/HTML_CSSchallenge3/style.css
+++ b/HTML_CSSchallenge3/style.css
@@ -1,8 +1,9 @@
 
 
-body {
+body  {
     background-color: hsl(257, 40%, 49%);
     margin: 80px;
+    width: 100%;
 }
 
 #title {
@@ -13,10 +14,22 @@ body {
 }
 
 #center-content{
+display: flex;
+flex-direction: row;
+}
+
+#center-image{
 
 }
 
 #center-content > div {
     display: flex;
     flex-direction: column;
+    width: auto;
+}
+
+#center-text {
+    margin: 70px;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
 }
