--- a/HTML_CSSchallenge3/style.css
+++ b/HTML_CSSchallenge3/style.css
@@ -75,10 +75,9 @@ p {
    
 }
 
-#footer {
-    position: absolute;
-    right: 0;
-    margin: 50px;
+footer {
+    display: flex;
+    justify-content: flex-end;
 
 }
 
