--- a/HTML_CSSchallenge4/style.css
+++ b/HTML_CSSchallenge4/style.css
@@ -62,3 +62,26 @@ p {
 button {
     outline-style: none;
 }
+
+
+@media screen and (max-width: 925px) {
+
+    .column {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #col-2  {
+        width: 100%;
+          
+    }
+
+    #col-3 {
+        width: 100%;
+    }
+    
+
+
+
+
+}
