--- a/HTML_CSSchallenge4/style.css
+++ b/HTML_CSSchallenge4/style.css
@@ -1,10 +1,21 @@
-body {
-    background: blue;
-    font-size: 16px;
-    font-family: 'Karla', sans-serif;
+ html body {
+    /*position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    top: 0;*/
+    height: 100%;
+    width: 100%;
+    border: 2px solid black;
 }
 
 #container {
+margin: 0;
+width: 100%;
+font-size: 16px;
+font-family: 'Karla', sans-serif;
+
+
 
 }
 
@@ -16,6 +27,7 @@ body {
 #col-1 {
     background: white;
     width: 100%;
+
 }
 
 #col-2 {
@@ -30,8 +42,11 @@ body {
 }
 
 .text {
-    margin: 2em;
+    margin: 3.5rem;
     text-align: left;
+    width: 100%;
+    
+    
 }
 
 .header-1 {
@@ -60,7 +75,27 @@ p {
 }
 
 button {
-    outline-style: none;
+    outline: none;
+    width: 50%;
+    height: 6.5vh;
+    margin: 2.5rem;
+    margin-left: 9em;
+    border-radius: 7px;
+    background: hsl(71, 73%, 54%);
+    color:  white;
+    font-weight: 700;
+    box-shadow: 3px 3px;
+    padding: 0;
+    border: 0;
+    
+
+}
+
+button:hover {
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+
 }
 
 
@@ -79,9 +114,43 @@ button {
     #col-3 {
         width: 100%;
     }
+
+
+    
+button {
+    outline: none;
+    width: 85%;
+    height: 6.5vh;
+    border-radius: 7px;
+    background: hsl(71, 73%, 54%);
+    color:  white;
+    font-weight: 700;
+    box-shadow: 3px 3px;
+    border: 0;
+    margin: 30px auto;
+    display: block;
+
     
 
+}
 
+body {
+    margin: 0 auto;
+    width: 100%;
+
+}
+
+.text {
+
+    display: flex;
+    align-items: center;
+    text-align: left;
+    width: 100%;
+
+
+}
+
+    
 
 
 }
